--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
             left: 50%;
             transform: translateX(-50%);
             transition: transform 0.1s;
-            max-width: 100px; /* Defina a largura máxima do boneco */
+            max-width: 100px;
         }
 
         .controls {
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div id="game-area">
-        <img id="character" src="boneco.png" alt="Boneco">
+        <img id="character" src="/mnt/data/A_simple_fighting_game_character_in_a_neutral_pose.png" alt="Boneco">
     </div>
     <div class="controls">
         <button id="move-left">Andar para Trás</button>
